[project]
name = "my-neuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cn2an>=0.5.23",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "fastapi>=0.117.1",
    "faster-whisper>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "funasr>=0.9.6",
    "g2p-en>=2.1.0",
    "gradio>=5.46.1",
    "jieba-fast>=0.53",
    "langsegment>=0.2.0",
    "librosa>=0.9.2",
    "matplotlib>=3.7.1",
    "modelscope>=1.30.0",
    "numpy>=2.3.3",
    "onnxruntime>=1.22.1",
    "opencc>=1.1.9",
    "peft>=0.17.1",
    "protobuf>=3.20.0",
    "py3langid>=0.3.0",
    "py7zr>=1.0.0",
    "pydantic>=1.10.8",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.20",
    "pytorch-lightning>=2.5.5",
    "scipy>=1.10.1",
    "sentence-transformers>=5.1.0",
    "soundfile>=0.10.3",
    "starlette>=0.27.0",
    "tensorboard>=2.20.0",
    "torch>=1.12.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "typing-extensions>=4.5.0",
    "uvicorn>=0.36.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
    "wordsegment>=1.3.1",
    "x-transformers>=2.7.6",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
